Added JS for Google Maps JS API

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -125,3 +125,97 @@
         </div>
     </body>
 </html>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0L5FuS1PZXDw90PINaMckDeQyIj_em1M"></script>
+<script type="text/javascript">
+        //Map Overlay Below here
+        {% if (entry.longitude is not null) and (entry.latitude is not null) %}
+        
+            /* 
+            * To change this license header, choose License Headers in Project Properties.
+            * To change this template file, choose Tools | Templates
+            * and open the template in the editor.
+            */
+            var overlay;
+            EventSiteOverlay.prototype = new google.maps.OverlayView();
+            // Initialize the map and the custom overlay.
+            function initMap() {
+                var map = new google.maps.Map(document.getElementById('logMap'), {
+                    zoom: 17,
+                    //center: {lat: 51.379300, lng: -2.32700},
+                    center: {lat: {{ eventLat }}, lng: {{ eventLong }}},
+                    mapTypeId: 'satellite'
+                });
+                var bounds = new google.maps.LatLngBounds(
+                    //new google.maps.LatLng(51.37808, -2.32938),
+                    new google.maps.LatLng({{ NEbound }}),
+                    //new google.maps.LatLng(51.38039, -2.32373)
+                    new google.maps.LatLng({{ SWbound }})
+                );
+                var srcImage = '{{ url('overlay', {'filename': overlayFileName}) }}';
+                overlay = new EventSiteOverlay(bounds, srcImage, map);
+                var marker = new google.maps.Marker({
+                    position: {lat:{{ entry.latitude }}, lng:{{ entry.longitude }}},
+                    map: map
+                });
+            }
+            /** @constructor */
+            function EventSiteOverlay(bounds, image, map) {
+                // Initialize all properties.
+                this.bounds_ = bounds;
+                this.image_ = image;
+                this.map_ = map;
+                // Define a property to hold the image's div. We'll
+                // actually create this div upon receipt of the onAdd()
+                // method so we'll leave it null for now.
+                this.div_ = null;
+                // Explicitly call setMap on this overlay.
+                this.setMap(map);
+            }
+            /**
+             * onAdd is called when the map's panes are ready and the overlay has been
+             * added to the map.
+             */
+            EventSiteOverlay.prototype.onAdd = function() {
+                var div = document.createElement('div');
+                div.style.borderStyle = 'none';
+                div.style.borderWidth = '0px';
+                div.style.position = 'absolute';
+                // Create the img element and attach it to the div.
+                var img = document.createElement('img');
+                img.src = this.image_;
+                img.style.width = '100%';
+                img.style.height = '100%';
+                img.style.position = 'absolute';
+                div.appendChild(img);
+                this.div_ = div;
+                // Add the element to the "overlayLayer" pane.
+                var panes = this.getPanes();
+                panes.overlayLayer.appendChild(div);
+            };
+            EventSiteOverlay.prototype.draw = function() {
+                // We use the south-west and north-east
+                // coordinates of the overlay to peg it to the correct position and size.
+                // To do this, we need to retrieve the projection from the overlay.
+                var overlayProjection = this.getProjection();
+                // Retrieve the south-west and north-east coordinates of this overlay
+                // in LatLngs and convert them to pixel coordinates.
+                // We'll use these coordinates to resize the div.
+                var sw = overlayProjection.fromLatLngToDivPixel(this.bounds_.getSouthWest());
+                var ne = overlayProjection.fromLatLngToDivPixel(this.bounds_.getNorthEast());
+                // Resize the image's div to fit the indicated dimensions.
+                var div = this.div_;
+                div.style.left = sw.x + 'px';
+                div.style.top = ne.y + 'px';
+                div.style.width = (ne.x - sw.x) + 'px';
+                div.style.height = (sw.y - ne.y) + 'px';
+                div.style.opacity = "0.7";
+            };
+            // The onRemove() method will be called automatically from the API if
+            // we ever set the overlay's map property to 'null'.
+            EventSiteOverlay.prototype.onRemove = function() {
+                this.div_.parentNode.removeChild(this.div_);
+                this.div_ = null;
+            };
+            google.maps.event.addDomListener(window, 'load', initMap);
+        {% endif %}
+        </script>
