--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -40,7 +40,7 @@
                         </div>
                         {% if entry.latitude is not null %}
                             <div class="panel-footer">
-                                <img width="600" src="https://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=600x400&maptype=satellite&format=png&visual_refresh=true&zoom=18&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry">
+                                <div id="logMap"><img width="600" src="https://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=600x400&maptype=satellite&format=png&visual_refresh=true&zoom=18&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry"></div>
                             </div>
                         {% endif %}
                     </div>
@@ -141,14 +141,11 @@
             function initMap() {
                 var map = new google.maps.Map(document.getElementById('logMap'), {
                     zoom: 17,
-                    //center: {lat: 51.379300, lng: -2.32700},
                     center: {lat: {{ entry.latitude }}, lng: {{ entry.longitude }}},
                     mapTypeId: 'satellite'
                 });
                 var bounds = new google.maps.LatLngBounds(
-                    //new google.maps.LatLng(51.37808, -2.32938),
                     new google.maps.LatLng({{ NEbound }}),
-                    //new google.maps.LatLng(51.38039, -2.32373)
                     new google.maps.LatLng({{ SWbound }})
                 );
                 var srcImage = '{{ url('overlay', {'filename': overlayFileName}) }}';
