--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -39,8 +39,8 @@
                             {{ entry.reportedBy }}<br>
                         </div>
                         {% if entry.latitude is not null %}
-                            <div class="panel-footer">
-                                <div id="logMap"><img width="600" src="https://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=600x400&maptype=satellite&format=png&visual_refresh=true&zoom=18&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry"></div>
+                            <div id="logMap" class="panel-footer">
+                                <img width="600" src="https://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=600x400&maptype=satellite&format=png&visual_refresh=true&zoom=18&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry">
                             </div>
                         {% endif %}
                     </div>
