--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -2,6 +2,12 @@
     <head>
         <link rel="stylesheet" href="{{ app.request.getSchemeAndHttpHost() ~ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="http://eventcontrol.nb221.com/assets/vendor/bootstrap/dist/css/bootstrap.css">
+        <style>
+            #logMap {
+                height: 400px;
+                width: 100%;
+            }
+        </style>
     </head>
     <body>
         <div class="wrapper">
