Modified pdf map styles

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -5,7 +5,7 @@
         <style>
             #logMap {
                 height: 400px;
-                width: 100%;
+                width: 600px;
             }
         </style>
     </head>
@@ -44,12 +44,12 @@
                             <strong>Reported By: </strong>
                             {{ entry.reportedBy }}<br>
                         </div>
-                        {% if entry.latitude is not null %}
-                            <div id="logMap" class="panel-footer">
-                                <img width="600" src="https://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=600x400&maptype=satellite&format=png&visual_refresh=true&zoom=18&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry">
-                            </div>
-                        {% endif %}
                     </div>
+                    {% if entry.latitude is not null %}
+                        <div id="logMap">
+                            <img width="600" src="https://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=600x400&maptype=satellite&format=png&visual_refresh=true&zoom=18&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry">
+                        </div>
+                    {% endif %}
                     {% if general is null %}                      
                     {% else %}
                         <div class="panel panel-info" id="General">
