Attempt to change twig url to absolute url

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="http://eventcontrol.nb221.com/assets/vendor/bootstrap/dist/css/bootstrap.css">
         <style>
             #logMap {
-                height: 350px;
-                width: 600px;
+                height: 300px;
+                width: 400px;
             }
         </style>
     </head>
@@ -46,9 +46,11 @@
                         </div>
                     </div>
                     {% if entry.latitude is not null %}
+                        <br>
                         <div id="logMap">
                             <img width="600" src="https://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=600x400&maptype=satellite&format=png&visual_refresh=true&zoom=18&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry">
                         </div>
+                        <br>
                     {% endif %}
                     {% if general is null %}                      
                     {% else %}
@@ -154,7 +156,8 @@
                     new google.maps.LatLng({{ NEbound }}),
                     new google.maps.LatLng({{ SWbound }})
                 );
-                var srcImage = '{{ url('overlay', {'filename': overlayFileName}) }}';
+                var srcImage = '{{ absolute_url('overlay', {'filename': overlayFileName}) }}';
+
                 overlay = new EventSiteOverlay(bounds, srcImage, map);
                 var marker = new google.maps.Marker({
                     position: {lat:{{ entry.latitude }}, lng:{{ entry.longitude }}},
