--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -157,7 +157,8 @@
                     new google.maps.LatLng({{ SWbound }})
                 );
                 //var srcImage = '{{ absolute_url('overlay', {'filename': overlayFileName}) }}';
-                var srcImage = 'https://eventcontrol.nb221.com/overlay/SB16_SITE.png';
+                var srcImage = '{{ asset('../media/overlay/SB16_SITE.png') }}';
+                //var srcImage = 'https://eventcontrol.nb221.com/overlay/SB16_SITE.png';
 
                 overlay = new EventSiteOverlay(bounds, srcImage, map);
                 var marker = new google.maps.Marker({
