Added audit log to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -171,6 +171,11 @@
             Event System Settings
         </div>
     </a>
+    <a href="{{ path('audit') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+        <div class="row">
+            Audit Log
+        </div>
+    </a>
 {% endif %}
 <div class="row">
         <h4>Files & Information</h4>
