--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -116,12 +116,13 @@
     <h4>Operator Functions</h4>
 </div>
 <div class="btn-group">
-    
-    <a href="{{ path('logout') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
-        <div class="row">
-            Logout
-        </div>
-    </a>
+    <button type="button" class="btn btn-default" style="margin-bottom:4px;white-space: normal;" role="button">
+        <a href="{{ path('logout') }}" >
+            <div class="row">
+                Logout
+            </div>
+        </a>
+    </button>
     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="caret"></span>
         <span class="sr-only">Toggle Dropdown</span>
@@ -129,7 +130,7 @@
     <ul class="dropdown-menu">
         {% if is_granted('ROLE_ADMIN') %}
             <li>
-                <a href="{{ path('user_list') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+                <a href="{{ path('user_list') }}" style="margin-bottom:4px;white-space: normal;" role="button">
                     <div class="row">
                         Event Control User Settings
                     </div>
@@ -139,35 +140,26 @@
         {% if is_granted('ROLE_USER') %}
             {% if is_granted('ROLE_FIELD') %}
                 <li>
-                    <a href="{{ path('field_user_toggle') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+                    <a href="{{ path('field_user_toggle') }}" style="margin-bottom:4px;white-space: normal;" role="button">
                         <div class="row">
-                            <div class="col-md-12 col-xs-12">
+                            {% if is_granted('ROLE_FIELD') %}
                                 Toggle field user off
-                            </div>
-                        </div>
-                    </a>
-                </li>
-            {% else %}
-                <li>
-                    <a href="{{ path('field_user_toggle') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
-                        <div class="row">
-                            <div class="col-md-12 col-xs-12">
+                            {% else %}
                                 Toggle field user on
-                            </div>
+                            {% endif %}
                         </div>
                     </a>
                 </li>
-            {% endif %}
             {% if activeEventId(app.user.id) != 0 %}
                 <li>
-                    <a href="{{ path('signin') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+                    <a href="{{ path('signin') }}" style="margin-bottom:4px;white-space: normal;" role="button">
                         <div class="row">
                             Fire Register Sign-in
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="{{ path('fire_register') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+                    <a href="{{ path('fire_register') }}" style="margin-bottom:4px;white-space: normal;" role="button">
                         <div class="row">
                             Fire Register
                         </div>
@@ -175,7 +167,7 @@
                 </li>
             {% endif %}
             <li>
-                <a href="{{ path('peoplecounting') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+                <a href="{{ path('peoplecounting') }}" tyle="margin-bottom:4px;white-space: normal;" role="button">
                     <div class="row">
                         People Counting
                     </div>
@@ -184,14 +176,14 @@
         {% endif %}
         {% if is_granted('ROLE_ADMIN') %}
             <li>
-                <a href="{{ path('event_list') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+                <a href="{{ path('event_list') }}" style="margin-bottom:4px;white-space: normal;" role="button">
                     <div class="row">
                         Event System Settings
                     </div>
                 </a>
             </li>
             <li>
-                <a href="{{ path('audit') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+                <a href="{{ path('audit') }}" style="margin-bottom:4px;white-space: normal;" role="button">
                     <div class="row">
                         Audit Log
                     </div>
