--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -115,7 +115,7 @@
 <div class="row">
     <h4>Operator Functions</h4>
 </div>
-<div class="btn-group btn-block" style="margin-bottom:4px;white-space: normal;">
+<div class="btn-group" style="margin-bottom:4px;white-space: normal;">
     <div class="row">
         <button type="button" class="btn btn-default" role="button">
             <a href="{{ path('logout') }}" >
