Modified sidebar buttons

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -116,14 +116,14 @@
     <h4>Operator Functions</h4>
 </div>
 <div class="btn-group btn-block" role="group" style="margin-bottom:4px;white-space: normal;">
-    <button type="button" class="btn btn-default" role="button">
+    <button type="button" class="btn btn-default col-sm-10" role="button">
         <a href="{{ path('logout') }}" >
             <div class="row">
                 Logout
             </div>
         </a>
     </button>
-    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button type="button" class="btn btn-default dropdown-toggle col-sm-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="caret"></span>
         <span class="sr-only">Toggle Dropdown</span>
     </button>
