Added space around dropdown

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -124,7 +124,7 @@
         </button>
     {#</a>#}
     <button type="button" class="btn btn-default dropdown-toggle col-sm-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <span class="caret"></span>
+        &nbsp;<span class="caret"></span>&nbsp;
         <span class="sr-only">Toggle Dropdown</span>
     </button>
     <ul class="dropdown-menu">
