--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -116,13 +116,13 @@
     <h4>Operator Functions</h4>
 </div>
 <div class="btn-group btn-block" role="group" style="margin-bottom:4px;white-space: normal;">
-    {# <a href="{{ path('logout') }}"> #}
-        <button type="button" class="btn btn-default col-sm-10" role="button">
+    <a href="{{ path('logout') }}" class="btn btn-default col-sm-10" role="button">
+        {# <button type="button" class="btn btn-default col-sm-10" role="button"> #}
             <div class="row">
                 Logout
             </div>
-        </button>
-    {#</a>#}
+        {# </button> #}
+    </a>
     <button type="button" class="btn btn-default dropdown-toggle col-sm-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         &nbsp;<span class="caret"></span>&nbsp;
         <span class="sr-only">Toggle Dropdown</span>
