Modified Files and Information width

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -190,10 +190,7 @@
         {% endif %}
     </ul>
 </div>
-<div class="row">
-        <h4>Files & Information</h4>
-</div>
-<div class="btn-group">
+<div class="btn-group btn-block">
     <button type="button" class="btn btn-default btn-block dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Files & Information <span class="caret"></span>
     </button>
