Modified control room functions sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -239,21 +239,21 @@
     </button>
     <ul class="dropdown-menu">
         <li>
-            <div id="LEDBtn1" style="margin-bottom:4px;white-space: normal;" role="button">
+            <div id="LEDBtn1">
                 <div class="row">
                     Full Working Light
                 </div>
             </div>
         </li>
         <li>
-            <div id="LEDBtn2" style="margin-bottom:4px;white-space: normal;" role="button">
+            <div id="LEDBtn2">
                 <div class="row">
                     Control Mode Working Light
                 </div>
             </div>
         </li>
         <li>
-            <div id="LEDBtn3" style="margin-bottom:4px;white-space: normal;" role="button">
+            <div id="LEDBtn3">
                 <div class="row">
                     Lighting Off
                 </div>
