Modified control ropom functions

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -239,24 +239,18 @@
     </button>
     <ul class="dropdown-menu">
         <li>
-            <div id="LEDBtn1">
-                <div class="row">
-                    Full Working Light
-                </div>
+            <div id="LEDBtn1" class="row">
+                Full Working Light
             </div>
         </li>
         <li>
-            <div id="LEDBtn2">
-                <div class="row">
-                    Control Mode Working Light
-                </div>
+            <div id="LEDBtn2" class="row">
+                Control Mode Working Light
             </div>
         </li>
         <li>
-            <div id="LEDBtn3">
-                <div class="row">
-                    Lighting Off
-                </div>
+            <div id="LEDBtn3" class="row">
+                Lighting Off
             </div>
         </li>
     </ul>
