--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -238,18 +238,18 @@
         Control Room Functions <span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
-        <li>
-            <div id="LEDBtn1" class="row">
+        <li id="LEDBtn1">
+            <div class="row">
                 Full Working Light
             </div>
         </li>
-        <li>
-            <div id="LEDBtn2" class="row">
+        <li id="LEDBtn2">
+            <div class="row">
                 Control Mode Working Light
             </div>
         </li>
-        <li>
-            <div id="LEDBtn3" class="row">
+        <li id="LEDBtn3">
+            <div class="row">
                 Lighting Off
             </div>
         </li>
@@ -258,6 +258,7 @@
     {% endif %}
 {% endif %}
 <br>
+
 <script type="text/javascript">
     $(document).ready(function() {
         sidebarPoll();
