--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -239,19 +239,25 @@
     </button>
     <ul class="dropdown-menu">
         <li id="LEDBtn1">
-            <div class="row">
-                Full Working Light
-            </div>
+            <a href="#" style="margin-bottom:4px;white-space: normal;" role="button">
+                <div class="row">
+                    Full Working Light
+                </div>
+            </a>
         </li>
         <li id="LEDBtn2">
-            <div class="row">
-                Control Mode Working Light
-            </div>
+            <a href="#" style="margin-bottom:4px;white-space: normal;" role="button">
+                <div class="row">
+                    Control Mode Working Light
+                </div>
+            </a>
         </li>
         <li id="LEDBtn3">
-            <div class="row">
-                Lighting Off
-            </div>
+            <a href="#" style="margin-bottom:4px;white-space: normal;" role="button">
+                <div class="row">
+                    Lighting Off
+                </div>
+            </a>
         </li>
     </ul>
 </div>
